--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "basiclightbox": "^5.0.4",
     "lightbox": "^0.5.0",
     "notiflix": "^3.2.6",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
